Menu changes done

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,34 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+    <ion-content class="menuContent">
+        <h2>Movies</h2>
+        <h5>Enjoy movie lovers</h5>
+        <ion-list>
+            <button ion-item (click)="onLoad(tabsPage)">
+                <ion-icon name="home" item-left></ion-icon>
+                Home
+            </button>
+            <button ion-item (click)="onLoad(settingsPage)">
+                <ion-icon name="settings" item-left></ion-icon>
+                Now Playing
+            </button>
+            <button ion-item (click)="onLoad(settingsPage)">
+                <ion-icon name="settings" item-left></ion-icon>
+                Latest
+            </button>
+            <button ion-item (click)="onLoad(settingsPage)">
+                <ion-icon name="settings" item-left></ion-icon>
+                Popular
+            </button>
+            <button ion-item (click)="onLoad(settingsPage)">
+                <ion-icon name="settings" item-left></ion-icon>
+                Upcoming
+            </button>
+            <button ion-item (click)="onLoad(settingsPage)">
+                <ion-icon name="settings" item-left></ion-icon>
+                Top Rated
+            </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #nav></ion-nav>
