--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,3 +22,8 @@
     background-color: color($colors,primary);
     color: #fff;
 }
+
+.menuContent .item-md{
+    background-color: color($colors,primary);
+    color: #fff;
+}
